--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Visitor Guestbook</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <form id="commentsForm">
+      <input type="text" name="Name" id="visitorname" />
+      <input type="text" name="Comment" id="comment" />
+      <input type="int" name="Rating (out of 5)" id="visitorrating" />
+      <button type="submit">Send</button>
+    </form>
   </body>
 </html>
