Added placeholder text for the form

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,19 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <form id="commentsForm">
-      <input type="text" name="Name" id="visitorname" />
-      <input type="text" name="Comment" id="comment" />
-      <input type="int" name="Rating (out of 5)" id="visitorrating" />
+      <input
+        type="text"
+        placeholder="First Name"
+        name="First Name"
+        id="firstname"
+      />
+      <input type="text" placeholder="Comment" name="Comment" id="comment" />
+      <input
+        type="int"
+        placeholder="Rating (out of 5) "
+        name="Rating (out of 5)"
+        id="visitorrating"
+      />
       <button type="submit">Send</button>
     </form>
   </body>
