Added header for webpage

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <h1>Visitor Guestbook</h1>
     <form id="commentsForm">
       <input
         type="text"
