Started to add 3 rows of table to hold visitor comments

--- a/client/index.html
+++ b/client/index.html
@@ -26,5 +26,23 @@
       />
       <button type="submit">Send</button>
     </form>
+
+    <table>
+      <tr>
+        <td id="left">Visitor Name</td>
+        <td id="center">Visitor Comment</td>
+        <td id="right">Rating</td>
+      </tr>
+      <tr>
+        <td id="left">Visitor Name</td>
+        <td id="center">Visitor Comment</td>
+        <td id="right">Rating</td>
+      </tr>
+      <tr>
+        <td id="left">Visitor Name</td>
+        <td id="center">Visitor Comment</td>
+        <td id="right">Rating</td>
+      </tr>
+    </table>
   </body>
 </html>
