Added drop down menu for Rating

--- a/client/index.html
+++ b/client/index.html
@@ -18,12 +18,14 @@
         id="firstname"
       />
       <input type="text" placeholder="Comment" name="Comment" id="comment" />
-      <input
-        type="int"
-        placeholder="Rating (out of 5) "
-        name="Rating (out of 5)"
-        id="visitorrating"
-      />
+      <select type="int" placeholder="select" name="Rating" id="visitorrating">
+        <option value="">Choose</option>
+        <option value="One">One</option>
+        <option value="Two">Two</option>
+        <option value="Three">Three</option>
+        <option value="Four">Four</option>
+        <option value="Five">Five</option>
+      </select>
       <button type="submit">Send</button>
     </form>
 
