Added labels for form entries

--- a/client/index.html
+++ b/client/index.html
@@ -11,15 +11,18 @@
     <script type="module" src="/src/main.js"></script>
     <h1>Visitor Guestbook</h1>
     <form id="commentsForm">
+      <label for="First Name">First Name:</label>
       <input
         type="text"
         placeholder="First Name"
         name="First Name"
         id="firstname"
       />
+      <label for="Comment">Comment:</label>
       <input type="text" placeholder="Comment" name="Comment" id="comment" />
+      <label for="Rating">Rating:</label>
       <select type="int" placeholder="select" name="Rating" id="visitorrating">
-        <option value="">Choose</option>
+        <option value="">Select</option>
         <option value="One">One</option>
         <option value="Two">Two</option>
         <option value="Three">Three</option>
