Made so many changes, mainly just testing back end to get the GET/POST to work

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
         <option value="Five">Five</option>
         required
       </select>
-      <button type="submit">Send</button>
+      <button type="submit">Submit</button>
     </form>
 
     <table>
